--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.12.11",
 		"multer": "^1.4.2",
+		"nodemailer": "^6.7.7",
 		"serve-favicon": "^2.5.0",
 		"uuid": "^8.3.2"
 	},
