--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
 		"express": "^4.17.1",
 		"express-validator": "^6.11.1",
 		"fs": "^0.0.1-security",
+		"i": "^0.3.7",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.12.11",
 		"multer": "^1.4.2",
+		"nodemailer": "^6.7.7",
+		"npm": "^8.14.0",
 		"serve-favicon": "^2.5.0",
 		"uuid": "^8.3.2"
 	},
