--- a/mern-auth/package.json
+++ b/mern-auth/package.json
@@ -7,12 +7,14 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.21.1",
+		"bootstrap": "^5.1.3",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
+		"react-bootstrap": "^2.4.0",
 		"react-dom": "^17.0.2",
 		"react-hot-toast": "^2.3.0",
 		"react-redux": "^7.2.4",
-		"react-router-dom": "^5.2.0",
+		"react-router-dom": "^5.3.3",
 		"react-scripts": "4.0.3",
 		"redux": "^4.1.0",
 		"redux-devtools-extension": "^2.13.9",
